Adição de Tratamento para Priorizar Produções Vazias (Tabela 2)

--- a/first_follow.ipynb
+++ b/first_follow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 460,
+   "execution_count": 707,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 461,
+   "execution_count": 708,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 462,
+   "execution_count": 709,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 463,
+   "execution_count": 710,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 464,
+   "execution_count": 711,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 465,
+   "execution_count": 712,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -91,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 466,
+   "execution_count": 713,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 467,
+   "execution_count": 714,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +109,7 @@
        "5"
       ]
      },
-     "execution_count": 467,
+     "execution_count": 714,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 468,
+   "execution_count": 715,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -137,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 469,
+   "execution_count": 716,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 470,
+   "execution_count": 717,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +182,7 @@
        "['b', 'a', 'd', 'g', 'h']"
       ]
      },
-     "execution_count": 470,
+     "execution_count": 717,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -200,7 +200,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 471,
+   "execution_count": 718,
    "metadata": {},
    "outputs": [
     {
@@ -209,7 +209,7 @@
        "['b', 'a', 'd', 'g', 'h']"
       ]
      },
-     "execution_count": 471,
+     "execution_count": 718,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -220,7 +220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 472,
+   "execution_count": 719,
    "metadata": {},
    "outputs": [
     {
@@ -229,7 +229,7 @@
        "['S', 'A', 'B', 'C']"
       ]
      },
-     "execution_count": 472,
+     "execution_count": 719,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -255,7 +255,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 473,
+   "execution_count": 720,
    "metadata": {},
    "outputs": [
     {
@@ -264,7 +264,7 @@
        "['S', 'A', 'B', 'C']"
       ]
      },
-     "execution_count": 473,
+     "execution_count": 720,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 474,
+   "execution_count": 721,
    "metadata": {},
    "outputs": [
     {
@@ -284,7 +284,7 @@
        "['S', 'A', 'B', 'C']"
       ]
      },
-     "execution_count": 474,
+     "execution_count": 721,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 475,
+   "execution_count": 722,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -304,7 +304,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 476,
+   "execution_count": 723,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 477,
+   "execution_count": 724,
    "metadata": {},
    "outputs": [
     {
@@ -343,7 +343,7 @@
        " 'C': ['h', 'λ']}"
       ]
      },
-     "execution_count": 477,
+     "execution_count": 724,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -354,7 +354,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 478,
+   "execution_count": 725,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 479,
+   "execution_count": 726,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
        " 'C': ['h', 'λ']}"
       ]
      },
-     "execution_count": 479,
+     "execution_count": 726,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -393,7 +393,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 480,
+   "execution_count": 727,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
        "{'S': [], 'A': [], 'B': [], 'C': []}"
       ]
      },
-     "execution_count": 480,
+     "execution_count": 727,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -413,7 +413,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 481,
+   "execution_count": 728,
    "metadata": {},
    "outputs": [
     {
@@ -422,7 +422,7 @@
        "{'S': [], 'A': [], 'B': [], 'C': []}"
       ]
      },
-     "execution_count": 481,
+     "execution_count": 728,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +433,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 482,
+   "execution_count": 729,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +447,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 483,
+   "execution_count": 730,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 484,
+   "execution_count": 731,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -519,7 +519,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 485,
+   "execution_count": 732,
    "metadata": {},
    "outputs": [
     {
@@ -531,7 +531,7 @@
        " 'C': ['h', 'λ']}"
       ]
      },
-     "execution_count": 485,
+     "execution_count": 732,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -542,7 +542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 486,
+   "execution_count": 733,
    "metadata": {},
    "outputs": [
     {
@@ -551,7 +551,7 @@
        "{'S': [], 'A': [], 'B': [], 'C': []}"
       ]
      },
-     "execution_count": 486,
+     "execution_count": 733,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -562,7 +562,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 487,
+   "execution_count": 734,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 488,
+   "execution_count": 735,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -635,7 +635,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 489,
+   "execution_count": 736,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +644,7 @@
        "[['λ', 'g', 'h'], ['b'], ['a']]"
       ]
      },
-     "execution_count": 489,
+     "execution_count": 736,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -658,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 490,
+   "execution_count": 737,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -667,7 +667,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 491,
+   "execution_count": 738,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -676,7 +676,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 492,
+   "execution_count": 739,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -691,7 +691,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 493,
+   "execution_count": 740,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -701,7 +701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 494,
+   "execution_count": 741,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -711,7 +711,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 495,
+   "execution_count": 742,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -721,7 +721,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 496,
+   "execution_count": 743,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -734,7 +734,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 497,
+   "execution_count": 744,
    "metadata": {},
    "outputs": [
     {
@@ -805,7 +805,7 @@
        "3        C         {h,λ}          {λ,h}  {h,g,$,b}"
       ]
      },
-     "execution_count": 497,
+     "execution_count": 744,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 498,
+   "execution_count": 745,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -833,7 +833,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 499,
+   "execution_count": 746,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -844,7 +844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 500,
+   "execution_count": 747,
    "metadata": {},
    "outputs": [
     {
@@ -935,7 +935,7 @@
        "C           C  NaN  NaN  NaN  NaN  NaN"
       ]
      },
-     "execution_count": 500,
+     "execution_count": 747,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 501,
+   "execution_count": 748,
    "metadata": {},
    "outputs": [
     {
@@ -966,7 +966,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 502,
+   "execution_count": 749,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -976,11 +976,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 503,
+   "execution_count": 750,
    "metadata": {},
    "outputs": [],
    "source": [
     "### Tratar casos onde a produção é vazia -> Usar elementos do follow\n",
+    "lista_ajustes = []\n",
     "\n",
     "for row in lista_first_por_elem:\n",
     "    if 'λ' in row[1]:\n",
@@ -994,16 +995,55 @@
     "            lista_follow = [elem for elem in lista_follow if elem not in first_dict[row[0]]]\n",
     "            lista = merge_lists(row[2],lista_follow)        \n",
     "            row[2] = [elem for elem in lista if elem != 'λ']\n",
+    "            lista_ajustes.append([row[0],row[2]])\n",
     "        \n",
     "\n",
     "### Eliminar Variaves Não Terminais Erradas\n",
     "\n",
-    "lista_table = [elem for elem in lista_first_por_elem if elem[0] in variaveis_nao_terminais]"
+    "lista_table = [elem for elem in lista_first_por_elem if elem[0] in variaveis_nao_terminais]\n",
+    "lista_ajustes = [elem for elem in lista_ajustes if elem[0] in variaveis_nao_terminais]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 504,
+   "execution_count": 751,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'A': ['g', '$', 'h'], 'S': ['g', 'd', 'h', '$']}"
+      ]
+     },
+     "execution_count": 751,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "### Tentando deixar como prioridade os elementos que geram vazio\n",
+    "\n",
+    "dicionario_ajustes = dict(lista_ajustes)\n",
+    "\n",
+    "for elem in lista_table:\n",
+    "    for coluna in elem[2]:\n",
+    "        if elem[0] in dicionario_ajustes.keys():\n",
+    "            if elem[2] != dicionario_ajustes[elem[0]]:\n",
+    "                [elem[2].remove(remov) for remov in elem[2] if remov in dicionario_ajustes[elem[0]]] "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 752,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "         \n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 753,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,7 +1055,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 505,
+   "execution_count": 754,
    "metadata": {},
    "outputs": [
     {
@@ -1065,8 +1105,8 @@
        "      <td>S-&gt;CbB</td>\n",
        "      <td>S-&gt;Ba</td>\n",
        "      <td>S-&gt;ACB</td>\n",
-       "      <td>S-&gt;Ba</td>\n",
-       "      <td>S-&gt;CbB</td>\n",
+       "      <td>S-&gt;ACB</td>\n",
+       "      <td>S-&gt;ACB</td>\n",
        "      <td>S-&gt;ACB</td>\n",
        "    </tr>\n",
        "    <tr>\n",
@@ -1104,15 +1144,15 @@
        "</div>"
       ],
       "text/plain": [
-       "       M(V,T)       b      a       d      g       h       $\n",
-       "M(V,T)                                                     \n",
-       "S           S  S->CbB  S->Ba  S->ACB  S->Ba  S->CbB  S->ACB\n",
-       "A           A       -      -   A->da  A->BC   A->BC   A->BC\n",
-       "B           B       -   B->λ       -   B->g    B->λ    B->λ\n",
-       "C           C    C->λ      -       -   C->λ    C->h    C->λ"
+       "       M(V,T)       b      a       d       g       h       $\n",
+       "M(V,T)                                                      \n",
+       "S           S  S->CbB  S->Ba  S->ACB  S->ACB  S->ACB  S->ACB\n",
+       "A           A       -      -   A->da   A->BC   A->BC   A->BC\n",
+       "B           B       -   B->λ       -    B->g    B->λ    B->λ\n",
+       "C           C    C->λ      -       -    C->λ    C->h    C->λ"
       ]
      },
-     "execution_count": 505,
+     "execution_count": 754,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1126,18 +1166,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 513,
+   "execution_count": 755,
    "metadata": {},
    "outputs": [],
    "source": [
     "#### Tabela de Verificação\n",
-    "palavra = 'dahg'\n",
+    "palavra = 'gh'\n",
     "palavra = palavra.replace(\" \",\"\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 514,
+   "execution_count": 756,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1150,7 +1190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 522,
+   "execution_count": 757,
    "metadata": {},
    "outputs": [
     {
@@ -1196,50 +1236,50 @@
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>$S</td>\n",
-       "      <td>dahg$</td>\n",
+       "      <td>gh$</td>\n",
        "      <td>S-&gt;ACB</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>$BCA</td>\n",
-       "      <td>dahg$</td>\n",
-       "      <td>A-&gt;da</td>\n",
+       "      <td>gh$</td>\n",
+       "      <td>A-&gt;BC</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
-       "      <td>$BCad</td>\n",
-       "      <td>dahg$</td>\n",
-       "      <td></td>\n",
+       "      <td>$BCCB</td>\n",
+       "      <td>gh$</td>\n",
+       "      <td>B-&gt;g</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
-       "      <td>$BCa</td>\n",
-       "      <td>ahg$</td>\n",
+       "      <td>$BCCg</td>\n",
+       "      <td>gh$</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
-       "      <td>$BC</td>\n",
-       "      <td>hg$</td>\n",
+       "      <td>$BCC</td>\n",
+       "      <td>h$</td>\n",
        "      <td>C-&gt;h</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
-       "      <td>$Bh</td>\n",
-       "      <td>hg$</td>\n",
+       "      <td>$BCh</td>\n",
+       "      <td>h$</td>\n",
        "      <td></td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
-       "      <td>$B</td>\n",
-       "      <td>g$</td>\n",
-       "      <td>B-&gt;g</td>\n",
+       "      <td>$BC</td>\n",
+       "      <td>$</td>\n",
+       "      <td>C-&gt;λ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
-       "      <td>$g</td>\n",
-       "      <td>g$</td>\n",
-       "      <td></td>\n",
+       "      <td>$B</td>\n",
+       "      <td>$</td>\n",
+       "      <td>B-&gt;λ</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -1254,18 +1294,18 @@
       "text/plain": [
        "   Pilha Entrada Producao\n",
        "0      $       $        S\n",
-       "1     $S   dahg$   S->ACB\n",
-       "2   $BCA   dahg$    A->da\n",
-       "3  $BCad   dahg$         \n",
-       "4   $BCa    ahg$         \n",
-       "5    $BC     hg$     C->h\n",
-       "6    $Bh     hg$         \n",
-       "7     $B      g$     B->g\n",
-       "8     $g      g$         \n",
+       "1     $S     gh$   S->ACB\n",
+       "2   $BCA     gh$    A->BC\n",
+       "3  $BCCB     gh$     B->g\n",
+       "4  $BCCg     gh$         \n",
+       "5   $BCC      h$     C->h\n",
+       "6   $BCh      h$         \n",
+       "7    $BC       $     C->λ\n",
+       "8     $B       $     B->λ\n",
        "9      $       $         "
       ]
      },
-     "execution_count": 522,
+     "execution_count": 757,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1331,51 +1371,26 @@
     "    if pop_entrada: lista_entrada.pop(0)\n",
     "    eliminado = lista_pilha.pop()\n",
     "\n",
-    "df_2\n",
-    "\n",
-    "\n",
-    "\n"
+    "df_2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 520,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "['h', 'a', 'C', 'b', 'B', 'S', 'g', 'd', 'A', 'M(V,T)', '$']"
-      ]
-     },
-     "execution_count": 520,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 518,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['S', 'A', 'B', 'C'], dtype='object', name='M(V,T)')"
-      ]
-     },
-     "execution_count": 518,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 519,
+   "execution_count": 758,
    "metadata": {},
    "outputs": [
     {
@@ -1384,7 +1399,7 @@
        "Index(['M(V,T)', 'b', 'a', 'd', 'g', 'h', '$'], dtype='object')"
       ]
      },
-     "execution_count": 519,
+     "execution_count": 758,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1395,16 +1410,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 511,
+   "execution_count": 759,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'x'"
+       "'$'"
       ]
      },
-     "execution_count": 511,
+     "execution_count": 759,
      "metadata": {},
      "output_type": "execute_result"
     }
