--- a/loop_first_follow.ipynb
+++ b/loop_first_follow.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -78,6 +78,15 @@
      "output_type": "stream",
      "text": [
       "Erro no arquivo: exemplo2.txt -> list index out of range\n",
+      "Executando arquivo: exemplo3.txt\n",
+      "S : {aBDh}\n",
+      "B : {cC}\n",
+      "C : {bC,λ}\n",
+      "D : {EF}\n",
+      "E : {g,λ}\n",
+      "F : {f,λ}\n",
+      "Elemento não corresponde ao Alfabeto\n",
+      "Elemento não corresponde ao Alfabeto\n",
       "Executando arquivo: input_a.txt\n",
       "S : {aSbc,D}\n",
       "D : {dD,d}\n",
@@ -190,15 +199,33 @@
       "T : {aTb,λ}\n",
       "A : {aA,a}\n",
       "B : {bB,b}\n",
-      "Não foi possível realizar a palavra, pilha não possui não-terminais\n",
-      "Não foi possível realizar a palavra, pilha não possui não-terminais\n"
+      "Terminou\n",
+      "Terminou\n"
+     ]
+    },
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32mc:\\Users\\arauj\\Documents\\Nassau\\Periodo_7\\Compiladores\\First_Follow\\first_follow.ipynb\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     11\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 12\u001b[1;33m \u001b[0melemento_analisado\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlista_pilha\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;33m-\u001b[0m\u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     13\u001b[0m \u001b[0melemento_entrada\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mlista_entrada\u001b[0m\u001b[1;33m[\u001b[0m\u001b[1;36m0\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     14\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mIndexError\u001b[0m: list index out of range"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Erro no arquivo: input_h.txt -> list index out of range\n"
      ]
     }
    ],
    "source": [
     "from os import walk\n",
     "\n",
-    "file_path = \"lib/input/\"\n",
+    "file_path = \"lib/input/productions\"\n",
     "filenames = next(walk(file_path), (None, None, []))[2]\n",
     "for file_name_externo in filenames:\n",
     "    try:\n",
